add referral system to checkout process

--- a/client/app/checkout/checkout.jade
+++ b/client/app/checkout/checkout.jade
@@ -1,7 +1,7 @@
 .container
 	navbar
 	.row
-		div.col-xs-10.col-xs-offset-1
+		div.col-sm-10.col-sm-offset-1
 			div#form-container
 				.row
 					div#status-buttons.text-center.col-md-8.col-md-offset-2
@@ -52,4 +52,4 @@ form(method="post", id="ezship_order_form", action="https://www.ezship.com.tw/em
 	
 //- .pre {{shipping_info}}
 //- .well {{cart}}
-//- footer
+footer
