--- a/client/components/footer/footer.jade
+++ b/client/components/footer/footer.jade
@@ -1,4 +1,3 @@
-div.navbar.navbar-default.navbar-fixed-bottom
+div.navbar.navbar-fixed-bottom.footer
 	div.container
-		p.navbar-text.text-center Enjoy Vecs Gardenia, Love Vecs Gardenia.
-		//- a.navbar-btn.btn.btn-default.pull-right(href='https://github.com/NeoNeoHo') Subscribe on Vecs Gardenia
+		p {{footerSentence}}
