--- a/client/app/checkout/checkout.scss
+++ b/client/app/checkout/checkout.scss
@@ -1,4 +1,17 @@
+.col-fullwidth-offset {
+  margin-right: -10px;
+  margin-left: -10px;
+}
 
+.bg-orange {
+  background-color: #f4512c;
+  color: white;
+}
+
+.bg-black {
+  background-color: black;
+  color: white;
+}
 
 #banner {
   border-bottom: none;
@@ -33,7 +46,7 @@
 }
 
 .logo {
-  padding: 0px 0px 30px 0px;
+  padding: 40px 0px 30px 0px;
 }
 
 .navbar-toggle-vecs {
