--- a/client/app/checkout/checkout.jade
+++ b/client/app/checkout/checkout.jade
@@ -6,34 +6,36 @@
 				.row
 					div#status-buttons.text-center.col-md-8.col-md-offset-2
 						.row
-							a.col-md-4.col-xs-4(ng-class="{'active': $state.is('checkout.product_check')}")
-								.in-circle 
-									span.h5 STEP
-									br
-									spna.h2 01
-								p 確認購物清單
-									br
-									| CHECK ORDER
-							a.col-md-4.col-xs-4(ng-class="{'active': $state.is('checkout.shipment_payment')}")
-								.in-circle
-									span.h5 STEP 
-									br
-									span.h2 02
-									br
-								p 付款方式
-									br
-									| SELECT PAYMENT
-							a.col-md-4.col-xs-4(ng-class="{'active': $state.is('checkout.final_confirm')}")
-								.in-circle 
-									span.h5 STEP 
-									br
-									span.h2 03
-								p 最後確認
-									br
-									| COMFIRM ORDER
-				.row
-					form.form-horizontal(name="checkout_form", novalidate)
-						div#form-views(ui-view="")
+							.col-md-4.col-xs-4
+								a(ng-class="{'active': $state.is('checkout.product_check')}")
+									.in-circle 
+										span.h5 STEP
+										br
+										spna.h2 01
+									p 確認購物清單
+										br
+										| CHECK ORDER
+							.col-md-4.col-xs-4
+								a(ng-class="{'active': $state.is('checkout.shipment_payment')}")
+									.in-circle
+										span.h5 STEP 
+										br
+										span.h2 02
+										br
+									p 付款方式
+										br
+										| SELECT PAYMENT
+							.col-md-4.col-xs-4
+								a(ng-class="{'active': $state.is('checkout.final_confirm')}")
+									.in-circle 
+										span.h5 STEP 
+										br
+										span.h2 03
+									p 最後確認
+										br
+										| COMFIRM ORDER
+				form.form-horizontal(name="checkout_form", novalidate)
+					div#form-views(ui-view="")
 
 form(method="post", id="cathay_order_form", action="{{form_action}}")
 	input(type='hidden', id='strRqXMLID', name='strRqXML', value='')
@@ -52,4 +54,5 @@ form(method="post", id="ezship_order_form", action="https://www.ezship.com.tw/em
 	
 //- .pre {{shipping_info}}
 //- .well {{cart}}
+.row(style="margin-top:30px")
 footer
