--- a/client/app/checkout/shipment_payment/shipment_payment.jade
+++ b/client/app/checkout/shipment_payment/shipment_payment.jade
@@ -115,6 +115,10 @@ div.page-header.h4(ng-click="with_memo_collapsed = !with_memo_collapsed")
 div.panel.panel-default
 	div.panel-body
 		div.form-group
+			label.col-sm-2.col-xs-4.control-label.text-right(for='input_noDM') 我不需要DM：
+			div.col-md-4.col-sm-10.col-xs-8
+				input.form-control(ng-model="shipping_info.dmRequest", type='checkbox', name='input_dmRequest') 
+		div.form-group
 			label.col-sm-2.col-xs-4.control-label.text-right(for='input_comment') 訂單備註：
 			div.col-md-4.col-sm-10.col-xs-8
 				input.form-control(ng-model="shipping_info.comment", type='textarea', name='input_comment', placeholder='選填') 
