--- a/client/app/checkout/shipment_payment/shipment_payment.jade
+++ b/client/app/checkout/shipment_payment/shipment_payment.jade
@@ -83,31 +83,64 @@ div.page-header.h4
 div.panel.panel-default
 	div.panel-body
 		div.form-group.required
-			label.col-sm-2.col-xs-4.control-label.text-right(for='input_name') 姓名
-			div.col-md-4.col-sm-10.col-xs-8
-				input.form-control(type='text', name='input_name', placeholder='請填寫真實姓名，以利寄送', ng-model="shipping_info.firstname", ng-minlength="2", required)
+			.row
+				label.col-sm-2.col-xs-4.control-label.text-right(for='input_name') 姓名
+				div.col-md-4.col-sm-10.col-xs-8
+					input.form-control(type='text', name='input_name', placeholder='請填寫真實姓名，以利寄送', ng-model="shipping_info.firstname", ng-minlength="2", required)
 		div.form-group.required(ng-class="{'disabled': payment_btn.store_pay}")
-			label.col-sm-2.col-xs-4.control-label.text-right(for='input_country') 地址
-			.row.col-sm-4.col-xs-8(ng-show="shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_overseas")
-				div.col-sm-6.col-xs-12
-					select.form-control(ng-options="country.country_id as country.name for country in country_coll", ng-model="shipping_info.country_id", ng-change="setCities(shipping_info.country_id)", name="input_country")
-						option(value='') 國家
-				div.col-sm-6.col-xs-12
-					select.form-control(ng-options="city.zone_id as city.name for city in city_coll", ng-model="shipping_info.city_id", ng-change="setCityName(shipping_info.city_id)", ng-disabled="!with_city_ready", name="input_city")
-						option(value='') 城市
-			.row.col-sm-4.col-xs-8(ng-show="shipping_info.shipment_sel_str != SHIPPING_NAME.ship_to_overseas")
-				div.col-sm-6.col-xs-12
-					select.form-control(ng-options="city.zone_id as city.name for city in city_coll", ng-model="shipping_info.city_id", ng-change="setDistricts(shipping_info.city_id)", ng-disabled="!with_city_ready", name="input_city2")
-						option(value='') 縣市
-				div.col-sm-6.col-xs-12
-					select.form-control(ng-options="district.district_id as district.name for district in district_coll", ng-model="shipping_info.district_id", ng-disabled="!shipping_info.city_id && !with_district_ready", ng-change="setDistrictName(shipping_info.district_id)", name="input_district")
-						option(value='') 鄉鎮市區
-			div.col-sm-6.col-xs-8.pull-right
-				input.form-control(type='address', id='input_address', placeholder='您的地址', ng-model="shipping_info.address", name="input_address")
+			.row
+				label.col-sm-2.col-xs-4.control-label.text-right(for='input_country') 地址
+				.col-sm-4.col-xs-8(ng-show="shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_overseas")
+					.row
+						div.col-sm-6.col-xs-12
+							select.form-control(ng-options="country.country_id as country.name for country in country_coll", ng-model="shipping_info.country_id", ng-change="setCities(shipping_info.country_id)", name="input_country")
+								option(value='') 國家
+						div.col-sm-6.col-xs-12
+							select.form-control(ng-options="city.zone_id as city.name for city in city_coll", ng-model="shipping_info.city_id", ng-change="setCityName(shipping_info.city_id)", ng-disabled="!with_city_ready", name="input_city")
+								option(value='') 城市
+				.col-sm-4.col-xs-8(ng-show="shipping_info.shipment_sel_str != SHIPPING_NAME.ship_to_overseas")
+					.row
+						div.col-sm-6.col-xs-12
+							select.form-control(ng-options="city.zone_id as city.name for city in city_coll", ng-model="shipping_info.city_id", ng-change="setDistricts(shipping_info.city_id)", ng-disabled="!with_city_ready", name="input_city2")
+								option(value='') 縣市
+						div.col-sm-6.col-xs-12
+							select.form-control(ng-options="district.district_id as district.name for district in district_coll", ng-model="shipping_info.district_id", ng-disabled="!shipping_info.city_id && !with_district_ready", ng-change="setDistrictName(shipping_info.district_id)", name="input_district")
+								option(value='') 鄉鎮市區
+				.col-sm-6.col-xs-8.pull-right
+					input.form-control(type='address', id='input_address', placeholder='您的地址', ng-model="shipping_info.address", name="input_address")
 		div.form-group.required
-			label.col-sm-2.col-xs-4.control-label.text-right(for='input_phone') 行動電話
-			div.col-md-4.col-sm-10.col-xs-8
-				input.form-control(type='tel', name='input_phone', ng-model="shipping_info.telephone", ng-minlength="10" , placeholder='0912345678', required) 
+			.row
+				label.col-sm-2.col-xs-4.control-label.text-right(for='input_phone') 行動電話
+				.col-md-4.col-sm-10.col-xs-8
+					input.form-control(type='tel', name='input_phone', ng-model="shipping_info.telephone", ng-minlength="10" , placeholder='0912345678', required)
+				
+				.col-md-2.hidden-sm.hidden-xs
+					div(ng-show="is_needed_to_check_tel")
+						button.btn.btn-danger(ng-disabled="checkout_form.input_phone.$invalid || wait_30_s", ng-click="smsFraudCheck(shipping_info.telephone)") 送出驗證碼
+					p.text-success(ng-show="shipping_info.verification.status === 'pass'") 已驗證成功
+						i.fa.fa-check.fa-2x
+				.col-md-4.hidden-sm.hidden-xs(ng-show="is_needed_to_check_tel && sent_sms_code_msg")
+					.form-inline
+						.form-group
+							input.form-control(type='text', placeholder="輸入驗證碼", ng-model="shipping_info.verification.code")
+							button.btn.btn-danger(ng-click="verifyTelSms()", ng-disabled="!shipping_info.verification.code") 送出
+					p.text-danger(ng-show="shipping_info.verification.status === 'fail'") 驗證碼錯誤
+					p.text-danger(ng-show="sent_sms_code_msg.status === 'duplicate'") {{sent_sms_code_msg.msg}}
+		div.form-group.visible-sm.visible-xs
+			.row
+				.col-sm-10.col-xs-8.col-sm-offset-2.col-xs-offset-4
+					div(ng-show="is_needed_to_check_tel")
+						button.btn.btn-danger(ng-disabled="checkout_form.input_phone.$invalid || wait_30_s", ng-click="smsFraudCheck(shipping_info.telephone)") 送出驗證碼
+					p.text-success(ng-show="shipping_info.verification.status === 'pass'") 已驗證成功
+						i.fa.fa-check.fa-2x
+		div.form-group.visible-sm.visible-xs
+			.row
+				.col-sm-10.col-xs-8.col-sm-offset-2.col-xs-offset-4(ng-show="is_needed_to_check_tel && sent_sms_code_msg")
+					.form-inline
+						input.form-control(type='text', placeholder="輸入驗證碼", ng-model="shipping_info.verification.code")
+						button.btn.btn-danger(ng-click="verifyTelSms()", ng-disabled="!shipping_info.verification.code") 送出
+					p.text-danger(ng-show="shipping_info.verification.status === 'fail'") 驗證碼錯誤
+					p.text-danger(ng-show="sent_sms_code_msg.status === 'duplicate'") {{sent_sms_code_msg.msg}}
 
 div.page-header.h4(ng-click="with_memo_collapsed = !with_memo_collapsed") 
 	img(src="../assets/images/checkout/logo_leaf.png", style="width:40px")
@@ -159,7 +192,7 @@ div.panel.panel-default
 		button.col-md-3.col-xs-4.btn.btn-default.btn-sharp.btn-lg.text-justify(ng-click="checkout_first_step()") 上一步
 		div.col-md-3.col-xs-7.pull-right
 			.row
-				button.col-xs-12.btn.btn-vecs.btn-sharp.btn-lg.text-justify(ng-click="checkout_third_step()", ng-disabled="checkout_form.$invalid", ng-class="{'btn-danger': checkout_form.$invalid}") 下一步
+				button.col-xs-12.btn.btn-vecs.btn-sharp.btn-lg.text-justify(ng-click="checkout_third_step()", ng-disabled="checkout_form.$invalid || !is_passed_tel_check", ng-class="{'btn-danger': checkout_form.$invalid || !is_passed_tel_check}") 下一步
 					span.glyphicon.glyphicon-circle-arrow-right.pull-right
-			.row(ng-show="checkout_form.$invalid || !is_address_valid")
-				p.text-danger --請檢查以上填寫的送貨資料 
+			.row(ng-show="checkout_form.$invalid || !is_address_valid || !is_passed_tel_check")
+				p.text-danger --請檢查以上填寫的送貨資料有無漏填
