--- a/client/app/checkout/checkout.scss
+++ b/client/app/checkout/checkout.scss
@@ -306,20 +306,20 @@ input.ng-touched.ng-valid, select.ng-touched.ng-valid, .form-check.ng-touched.ng
 /* basic styling for entering and leaving */
 /* left and right added to ensure full width */
 
-#form-views.ng-enter,
-#form-views.ng-leave      { position:absolute; left:30px; right:30px;
+.form-views.ng-enter,
+.form-views.ng-leave      { position:absolute; left:30px; right:30px;
     transition:0.6s all ease; -moz-transition:0.6s all ease; -webkit-transition:0.6s all ease; 
 }
     
 /* enter animation */
-#form-views.ng-enter            { 
+.form-views.ng-enter            { 
     -webkit-animation:slideInRight 0.6s both ease;
   -moz-animation:slideInRight 0.6s both ease;
   animation:slideInRight 0.6s both ease; 
 }
 
 /* leave animation */
-#form-views.ng-leave            { 
+.form-views.ng-leave            { 
     -webkit-animation:slideOutLeft 0.6s both ease;
   -moz-animation:slideOutLeft 0.6s both ease;
   animation:slideOutLeft 0.6s both ease;   
