create a route for cookie elimination

--- a/client/app/checkout/success/success.jade
+++ b/client/app/checkout/success/success.jade
@@ -72,3 +72,5 @@
 
 			button.col-md-3.col-xs-12.btn.btn-danger.bg-orange.btn-sharp.btn-lg.pull-right.text-justify(ng-click="backToHome()", role="button") 回到官網首頁
 				span.glyphicon.glyphicon-home.pull-right
+.row(style="margin-top:30px")
+footer
